gcc/testsuite/rust/compile/issue-4226.rs
#[doc]
// { dg-error "attribute must be of the form ...doc.hidden.inline....... or ...doc = string.." "" { target *-*-* } .-1 }
pub fn a(){}
